# auth-system

./: README.md  docker-compose.yml
app/: Dockerfile  main.py  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 6b4570d7ee09_email_verification.py  7d7880ef67ac_user_and_refresh_tokens.py
app/api/dependencies/: auth.py  rate_limit.py
app/api/routes/: auth.py
app/api/schemas/: auth.py
app/core/: config.py  database.py  db.py  email_verification.py  jwt.py  rate_limiter.py  redis.py  refresh_token.py  security.py
app/models/: __init__.py  email_verification_token.py  refresh_token.py  user.py
app/repositories/: email_verification_repository.py  refresh_token_repository.py  user_repository.py
app/services/: auth_service.py
